Fix a bug that project titles overflow in IE 11

--- a/frontend/src/pages/Home.scss
+++ b/frontend/src/pages/Home.scss
@@ -91,11 +91,12 @@ $header-color: rgb(12, 0, 78);
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            padding-left: 20px;
-            padding-right: 20px;
+            padding-left: 15px;
+            padding-right: 15px;
             border-left: white dashed 0.3px;
             
             h2 {
+		width: 100%;
                 font-weight: 700;
                 font-size: 22px;
                 color: white;
